# ai-adapter

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.static  Makefile  README.md  build.rs
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  server.rs
src/commands/: config.rs  mod.rs  session.rs  version.rs
src/state/: mod.rs  reasoning.rs  session.rs
src/stream/: sse.rs
src/translate/: mod.rs
src/translate/anthropic/: anthropic.rs  convert.rs
src/translate/deepseek/: anthropic.rs  chat.rs  mod.rs
src/translate/openai/: chat.rs
src/translate/xiaomimimo/: chat.rs  convert.rs  mod.rs
src/types/: anthropic.rs  chat.rs  mod.rs  responses.rs
